--- a/index.html
+++ b/index.html
@@ -12,6 +12,35 @@
     <title>Jeu de Dé</title>
 </head>
 <body>
-    
+
+    <!--Bouton de la fenêtre Modale------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
+<button class="d-block mt-5 btn btn-success mx-auto" data-bs-toggle="modal" data-bs-target="#modal1">Règles du Jeu</button>
+<!----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+
+<!--Fenêtre Modale------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+
+<div class="modal fade" id="modal1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" aria-labelledby="modal-title">Règles du Jeu</h5>
+            </div>
+            <div class="modal-body" aria-describedby="content">
+                <p>Chaque joueur possède un score temporaire (ROUND) et un score global (GLOBAL).
+                    A chaque tour, le joueur a son ROUND initialisé à 0 et peut lancer un dé autant de fois qu'il le souhaite.
+                    Le résultat d'un lancer est ajouté au ROUND. Lors de son tour, le joueur peut décider à tout moment de cliquer sur l'option ENCAISSER (hold), pour envoyer
+                    ses points de ROUND vers le GLOBAL. Ce sera alors au tour de l'autre joueur. Si un joueur lance le dé, et tombe sur 1, son ROUND est perdu et c'est la fin de son tour.
+                    Le premier joueur à atteindre les 100 points gagne la partie.
+                </p>
+            </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" data-bs-dismiss="modal">FERMER</button>
+        </div>
+    </div>
+</div>
+</div>
+
+<!--Fin de la Fenêtre Modale--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+
 </body>
 </html>
