#3 Ajout HTML interface joueurs et Bouton menu du jeu

--- a/index.html
+++ b/index.html
@@ -42,5 +42,47 @@
 
 <!--Fin de la Fenêtre Modale--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
+<!--Interface Joueur 1--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+<div class="wrapper clearfix">
+    <div class="player-0-panel active">
+        <div class="player-name" id="name-0">Joueur 1</div>
+        <div class="player-score" id="score-0"></div>
+        <div class="player-current-box">
+            <div class="player-current-label">Actuel</div>
+            <div class="player-current-score" id="current-0"></div>
+        </div>
+    </div>
+
+<!--Interface Joueur 2-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+    <div class="player-1-panel">
+        <div class="player-name" id="name-1">Joueur 2</div>
+        <div class="player-score" id="score-1"></div>
+        <div class="player-current-box">
+            <div class="player-current-label">Actuel</div>
+            <div class="player-current-score" id="current-1"></div>
+        </div>
+    </div>
+
+<!--Bouton Menu du Jeu------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->   
+<button class="btn-new"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-player-play" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+    <path d="M7 4v16l13 -8z"></path>
+ </svg>(RE)COMMENCER</button>
+<button class="btn-roll"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-refresh" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+    <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"></path>
+    <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"></path>
+ </svg>Lancer le Dé</button>
+<button class="btn-hold"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-file-download" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+    <path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
+    <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"></path>
+    <path d="M12 17v-6"></path>
+    <path d="M9.5 14.5l2.5 2.5l2.5 -2.5"></path>
+ </svg>Encaisser</button>
+
+<img src="images/de-1.png" alt="de" class="dice">
+</div>
+
 </body>
 </html>
