--- a/index.html
+++ b/index.html
@@ -84,5 +84,7 @@
 <img src="images/de-1.png" alt="de" class="dice">
 </div>
 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
 </body>
 </html>
