#8 Ajout CDN Bootstrap et balise link style.css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="Distribution" content="global">
     <meta name="author" content="CyberVex">
     <meta name="Description" content="Bienvenue dans un jeu de Dé ludique et amusant.">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="style.css">
     <title>Jeu de Dé</title>
 </head>
 <body>
